# cargo-new-deps

./: Cargo.toml  README.md
src/: main.rs
tests/: scenario_1.stdout
tests/fixtures/: main.json  router-3.json
